src/assets/styles/Timeline.scss
.vertical-timeline span {
    color: white;
    font-family: 'Courier Prime', monospace;
}

.vertical-timeline p {
    color: rgb(39, 40, 34);
}

.vertical-timeline-element p {
    color: rgb(39, 40, 34);
}

.vertical-timeline-element h3 {
    color: rgb(39, 40, 34);
}

.vertical-timeline-element h4 {
    color: rgb(39, 40, 34);
}

.vertical-timeline-element span {
    color: rgb(39, 40, 34);
}

/* Date on the side: must be white in dark mode so it’s visible on dark background */
.vertical-timeline-element .vertical-timeline-element-date,
.vertical-timeline--two-columns .vertical-timeline-element-content .vertical-timeline-element-date {
    color: #ffffff !important;
}

.svg-inline--fa {
    color: white;
}

@media screen and (max-width: 1170px) {
    .vertical-timeline-element .vertical-timeline-element-date {
        color: rgb(39, 40, 34);
    }
}

